feat(haproxy): switch from HTTP to admin socket for weight management
Use HAProxy admin socket instead of HTTP API for setting server weights. This provides more reliable communication and removes dependency on HTTP interface configuration. Added new socket configuration options in config file.

--- a/config-example.yaml
+++ b/config-example.yaml
@@ -29,6 +29,8 @@ haproxy:
   stats_user: "admin"
   stats_password: "your_password"
   backend_name: "galera_cluster_backend"
+  admin_socket_host: "127.0.0.1"
+  admin_socket_port: 5555
 
 telegram:
   enabled: false
