feat(auth): add authentication system with login and logout
- Implement Flask-Login integration for session management
- Add login page template with responsive design
- Create AuthManager class to handle user authentication
- Protect all routes with login_required decorator
- Add logout functionality and button to UI
- Include default admin credentials in config

--- a/config-example.yaml
+++ b/config-example.yaml
@@ -48,6 +48,10 @@ alerts:
   qps:
     min: null              # set to a number to enable
     max: null
+
+authentication:
+  username: "admin"
+  password: "admin123"
   wps:
     min: null
     max: null
