--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==3.0.2
+Flask-Login==0.6.3
 mysql-connector-python==8.3.0
 python-dotenv==1.0.1
 tabulate==0.9.0
 PyYAML==6.0.1
-requests==2.31.0 
+requests==2.31.0
